--- a/_posts/2014-03-18-Sudo--E.md
+++ b/_posts/2014-03-18-Sudo--E.md
@@ -2,12 +2,12 @@
 layout: post
 category: 
 tagline: 
-tags: [sudo, proxy, enviroment]
+tags: [sudo, proxy, environment]
 title: sudo -E
 ---
 {% include JB/setup %}
 
-If you even find yourself in a situation where you need to run a superuser command in your crafted terminal state, use:
+If you even find yourself in a situation where you need to run a superuser command in your carefully crafted terminal state, use:
 
 `sudo -E`
 
