--- a/_drafts/2014-03-18-Appscale.md
+++ b/_drafts/2014-03-18-Appscale.md
@@ -2,7 +2,7 @@
 layout: post
 category: 
 tagline: 
-tags: [appscale, appengine, cloud, paas]
+tags: [appscale, appengine, cloud, paas, debian]
 ---
 {% include JB/setup %}
 
@@ -40,6 +40,23 @@ If you are in the app directory, simply run: `mvn appengine:devserver` and you c
 
 ## Deploying on AppScale
 
+- Make sure you have
+  * A working Appscale instance. You can use the instructions on `https://github.com/AppScale/appscale/wiki/AppScale-on-VirtualBox` to set it up. Maybe I'll make another post about this.
+  * [appscale-tools](https://github.com/AppScale/appscale-tools) installed. See my [pull request](https://github.com/AppScale/appscale-tools/pull/384) on how to get it installed on debian-unstable or use my [fork](https://github.com/TimSoethout/appscale-tools).
 
-- Don't forget to add to IP(-range) of the machine to your no-proxy list to access it directly.
+When trying to run `appscale deploy <appengine-angular-guestbook-java-directory>` in the folder where your `Appscalefile` file is , you will get an error message : `Couldn't find an app.yaml or appengine-web.xml file in appengine-angular-guestbook-java/..`
 
+From the community questions it turns out that AppScale needs to have the program in a directory named `war` (https://groups.google.com/d/msg/appscale_community/--YyKd6xwts/NaoE1VDSu5cJ). Also old documentation states the following:
+
+```
+For Java apps, make sure you point "appscale deploy" at the directory that contains your "war" directory (not the "war" directory itself). If you don't, you'll get the same error message as above.
+```
+
+We can do this:
+- Make sure the project is build: `mvn clean package`
+- Rename (or copy) `target/appengine-angular-guestbook-java-1.0-SNAPSHOT/` to `target/war`
+- Deploy the application (from directory with `Appscalefile`): `appscale deploy appengine-angular-guestbook-java/target`
+- Visit your AppScale hosted site on the url given in the output.
+  * Don't forget to add to IP(-range) of the AppScale VM to your no-proxy list to access it directly
+
+- Profit
