removed illegal characters

--- a/_posts/2014-03-18-Appscale.md
+++ b/_posts/2014-03-18-Appscale.md
@@ -25,9 +25,9 @@ If you are in the app directory, simply run: `mvn appengine:devserver` and you c
 
 ### Setting up AppEngine
 - Login to [Google App Engine](https://appengine.google.com/)
-- Create an account with a specific application name <AppName>
+- Create an account with a specific application name.
 
-- In the file `src/main/webapp/WEB-INF/appengine-web.xml` change the `<application>` value from `gae-angular-guestbook` to your chosen <AppName>.
+- In the file `src/main/webapp/WEB-INF/appengine-web.xml` change the `<application>` value from `gae-angular-guestbook` to your chosen application name.
 
 - Run `mvn appengine:update`
   * Behind a proxy you need to pass the proxy parameters specifically since they seem to not been inherited:
@@ -36,7 +36,7 @@ If you are in the app directory, simply run: `mvn appengine:devserver` and you c
 
     See my other post to setup a proxy forwarder {% post_url 2014-03-17-Using-Cntlm-to-bypass-your-corporate-proxy %}.
 
-- Now see and behold the nice app at `http://<AppName>.appspot.com/`. Note that it may take some time to fire up the datastore.
+- Now see and behold the nice app at `http://applicationName.appspot.com/`. Note that it may take some time to fire up the datastore.
 
 ## Deploying on AppScale
 
@@ -44,7 +44,7 @@ If you are in the app directory, simply run: `mvn appengine:devserver` and you c
   * A working Appscale instance. You can use the instructions on `https://github.com/AppScale/appscale/wiki/AppScale-on-VirtualBox` to set it up. Maybe I'll make another post about this.
   * [appscale-tools](https://github.com/AppScale/appscale-tools) installed. See my [pull request](https://github.com/AppScale/appscale-tools/pull/384) on how to get it installed on debian-unstable or use my [fork](https://github.com/TimSoethout/appscale-tools).
 
-When trying to run `appscale deploy <appengine-angular-guestbook-java-directory>` in the folder where your `Appscalefile` file is , you will get an error message : `Couldn't find an app.yaml or appengine-web.xml file in appengine-angular-guestbook-java/..`
+When trying to run `appscale deploy appengine-angular-guestbook-java-directory` in the folder where your `Appscalefile` file is , you will get an error message : `Couldn't find an app.yaml or appengine-web.xml file in appengine-angular-guestbook-java/..`
 
 From the community questions it turns out that AppScale needs to have the program in a directory named `war` (https://groups.google.com/d/msg/appscale_community/--YyKd6xwts/NaoE1VDSu5cJ). Also old documentation states the following:
 
