--- a/_posts/2014-03-18-Appscale.md
+++ b/_posts/2014-03-18-Appscale.md
@@ -17,7 +17,7 @@ The basic documentation which this is based upon can also be found on https://gi
 
 - Make sure you have at least
   * Maven version 3.1.0: `mvn -version`
-  * Java 7
+  * Java 7: `javac -version`
 
 If you are in the app directory, simply run: `mvn appengine:devserver` and you can reach the sample app on `http://localhost:8080`.
 
@@ -30,11 +30,12 @@ If you are in the app directory, simply run: `mvn appengine:devserver` and you c
 - In the file `src/main/webapp/WEB-INF/appengine-web.xml` change the `<application>` value from `gae-angular-guestbook` to your chosen application name.
 
 - Run `mvn appengine:update`
-  * Behind a proxy you need to pass the proxy parameters specifically since they seem to not been inherited:
+  
+  Behind a proxy you need to pass the proxy parameters specifically since they seem to not been inherited:
 
-    `mvn -DproxySet=true -Dhttp.proxyHost=localhost -Dhttp.proxyPort=3128 appengine:update`
+  `mvn -DproxySet=true -Dhttp.proxyHost=localhost -Dhttp.proxyPort=3128 appengine:update`
 
-    See my other post to setup a proxy forwarder {% post_url 2014-03-17-Using-Cntlm-to-bypass-your-corporate-proxy %}.
+  See my other [post to setup a proxy forwarder]({% post_url 2014-03-17-Using-Cntlm-to-bypass-your-corporate-proxy %}).
 
 - Now see and behold the nice app at `http://applicationName.appspot.com/`. Note that it may take some time to fire up the datastore.
 
@@ -46,17 +47,16 @@ If you are in the app directory, simply run: `mvn appengine:devserver` and you c
 
 When trying to run `appscale deploy appengine-angular-guestbook-java-directory` in the folder where your `Appscalefile` file is , you will get an error message : `Couldn't find an app.yaml or appengine-web.xml file in appengine-angular-guestbook-java/..`
 
-From the community questions it turns out that AppScale needs to have the program in a directory named `war` (https://groups.google.com/d/msg/appscale_community/--YyKd6xwts/NaoE1VDSu5cJ). Also old documentation states the following:
-
+From [one of the community questions](https://groups.google.com/d/msg/appscale_community/--YyKd6xwts/NaoE1VDSu5cJ) it turns out that AppScale needs to have the program in a directory named `war`. Also old documentation states the following:
 ```
 For Java apps, make sure you point "appscale deploy" at the directory that contains your "war" directory (not the "war" directory itself). If you don't, you'll get the same error message as above.
 ```
 
 We can do this:
-- Make sure the project is build: `mvn clean package`
+- Make sure the example project is build and packaged: `mvn clean package`
 - Rename (or copy) `target/appengine-angular-guestbook-java-1.0-SNAPSHOT/` to `target/war`
 - Deploy the application (from directory with `Appscalefile`): `appscale deploy appengine-angular-guestbook-java/target`
 - Visit your AppScale hosted site on the url given in the output.
-  * Don't forget to add to IP(-range) of the AppScale VM to your no-proxy list to access it directly
-
+  * Don't forget to add to IP(-range) of the AppScale VM to your no-proxy list to access it directly in case of a proxy.
+- ...
 - Profit
