added pull request finished, todo list

--- a/_posts/2014-03-18-Appscale.md
+++ b/_posts/2014-03-18-Appscale.md
@@ -43,7 +43,7 @@ If you are in the app directory, simply run: `mvn appengine:devserver` and you c
 
 - Make sure you have
   * A working Appscale instance. You can use the instructions on `https://github.com/AppScale/appscale/wiki/AppScale-on-VirtualBox` to set it up. Maybe I'll make another post about this.
-  * [appscale-tools](https://github.com/AppScale/appscale-tools) installed. See my [pull request](https://github.com/AppScale/appscale-tools/pull/384) on how to get it installed on debian-unstable or use my [fork](https://github.com/TimSoethout/appscale-tools).
+  * [appscale-tools](https://github.com/AppScale/appscale-tools) installed. See my [pull request](https://github.com/AppScale/appscale-tools/pull/384) (edit: merged by now) on how to get it installed on debian-unstable or use my [fork](https://github.com/TimSoethout/appscale-tools).
 
 When trying to run `appscale deploy appengine-angular-guestbook-java-directory` in the folder where your `Appscalefile` file is , you will get an error message : `Couldn't find an app.yaml or appengine-web.xml file in appengine-angular-guestbook-java/..`
 
@@ -60,3 +60,8 @@ We can do this:
   * Don't forget to add to IP(-range) of the AppScale VM to your no-proxy list to access it directly in case of a proxy.
 - . . .
 - Profit
+
+## More to do!
+- Add deployment on OpenStack 
+- Add deployment on Docker
+
